#33 - Add support for using avaje-jsonb to serialise to/from json content